--- a/client/src/css/Filter/Filter.css
+++ b/client/src/css/Filter/Filter.css
@@ -1,61 +1,59 @@
 .filter-wrapper {
-  height: fit-content;
   width: 270px;
-  background-color: var(--mainColor);
+  background-color: var(--bodyWhite);
   transition: all 0.5s;
-  position: absolute;
+  position: fixed;
   left: -270px;
-  z-index: 10;
-  opacity: 0.97;
-  height: calc(100vh - 60px);
+  top: 55px;
+  z-index: 111;
+  box-shadow: var(--boxShadowStrong);
+  border-radius: 20px;
 }
 .filter-wrapper.move {
-  left: 0;
-  position: relative;
+  left: 10px;
+  overflow: hidden;
 }
 .filter-wrapper.move .arrow-to-left {
   right: 0;
+  top: 7px;
+  box-shadow: none;
+  padding: 5px;
 }
 .filter-wrapper.move .arrow-to-left svg {
   transform: rotate(180deg);
 }
-@media (max-width: 991px) {
-  .filter-wrapper.move {
-    position: absolute;
-  }
-}
 .filter-wrapper .arrow-to-left {
-  padding: 10px;
-  width: fit-content;
+  width: 30px;
+  height: 30px;
   position: absolute;
-  right: -36px;
+  right: -30px;
   top: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: all 0.3s;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  transition: all 0.5s;
   cursor: pointer;
-  background: var(--mainColor);
+  box-shadow: var(--boxShadow);
+  background: var(--bodyWhite);
 }
 .filter-wrapper .arrow-to-left svg {
-  fill: var(--secondColor);
+  fill: var(--redColor);
   font-size: 20px;
   transition: all 0.3s;
 }
 .filter-wrapper .category-title,
 .filter-wrapper .order-title {
-  background-color: var(--mainColor);
-  color: var(--textColor);
+  background-color: var(--bodyWhite);
+  color: var(--textSecondColor);
   font-weight: bold;
   text-transform: uppercase;
   font-size: 20px;
   padding: 10px;
 }
-.filter-wrapper .filter-content {
-  position: relative;
-}
 .filter-wrapper .filter-content .filter-items {
-  color: var(--textColor);
+  color: var(--textSecondColor);
   cursor: pointer;
   border: 1px solid #c0c0c0;
   padding: 5px;
@@ -63,12 +61,9 @@
   margin-bottom: 10px;
   position: relative;
 }
-.filter-wrapper .filter-content .filter-items:hover {
-  color: var(--textColor);
-  background-color: var(--secondColor);
-}
-.filter-wrapper .filter-content .filter-items.active {
-  border-color: var(--secondColor);
+.filter-wrapper .filter-content .filter-items:hover, .filter-wrapper .filter-content .filter-items.active {
+  background-color: var(--bkRed);
+  color: var(--redColor);
 }
 .filter-wrapper .filter-content .filter-by-category {
   padding: 10px;
@@ -77,17 +72,17 @@
   padding: 10px;
 }
 .filter-wrapper .filter-content .create-product-btn {
-  width: 80%;
+  width: 100%;
   margin: auto;
   display: block;
   padding: 10px;
-  background-color: var(--textColor);
+  background-color: var(--redColor);
   border: none;
-  margin-bottom: 10px;
 }
 .filter-wrapper .filter-content .create-product-btn a {
   text-decoration: none;
-  color: var(--mainColor);
+  color: var(--textColor);
   display: block;
   width: 100%;
+  font-weight: bold;
 }
