--- a/client/src/components/Products/Products.scss
+++ b/client/src/components/Products/Products.scss
@@ -1,89 +1,57 @@
-// $mainColor: #3a6b34;
-$mainColor: #333;
-$textColor: #fff;
-
 .products-wrapper {
-	margin-top: 20px;
-	// height: fit-content;
+	margin-top: 70px;
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-	gap: 20px;
-	transition: all 0.5s;
-
+	gap: 15px;
 	.product-item {
-		box-shadow: 2px 2px 10px #c0c0c0;
-		text-align: center;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
+		background-color: #fff;
+		box-shadow: 0px 1px 3px rgb(3 0 71 / 9%);
 		overflow: hidden;
+		border-radius: 10px;
+		text-align: center;
+		transition: 0.3s;
+		&:hover {
+			box-shadow: 0px 1px 15px rgb(3 0 71 / 9%);
+		}
 
 		img {
 			width: 200px;
 			max-width: 100%;
-			margin: auto;
 			cursor: pointer;
+			padding: var(--padding);
 		}
-
 		.product-desc {
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			padding: 10px;
-			border-top: 1px solid var(--secondColor);
-
+			> div {
+				color: var(--textSecondColor);
+				text-transform: capitalize;
+				padding: var(--padding);
+				text-align: left;
+			}
 			p {
-				text-transform: uppercase;
+				padding: var(--padding);
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+				color: var(--redColor);
+				span {
+					border-radius: 5px;
+					border: 1px solid var(--redColor);
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					cursor: pointer;
+					padding: 5px;
+					transition: all 0.3s;
+					&:active {
+						transform: scale(0.93);
+					}
+				}
 			}
-		}
-
-		button {
-			border: none;
-			font-size: 17px;
-			background: var(--mainColor);
-			color: var(--textColor);
-			width: 100%;
-			padding: 10px;
-			height: 40px;
-			text-align: left;
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			cursor: pointer;
-			&:active {
-				font-size: 16.7px;
-			}
-		}
-	}
-}
-
-@media (max-width: 767px) {
-	.products-wrapper {
-		margin-top: 50px;
-		.product-item {
-			width: 100%;
 		}
 	}
 }
 
 .product-modal {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	// width: 70%;
-	// height: 70%;
-	max-width: 90%;
-	max-height: 90%;
-	background-color: var(--bodyColor);
-	padding: 20px;
-	border-radius: 4px;
-	overflow: auto;
-	transition: all 0.4s ease-in-out;
-	opacity: 0;
-	&:focus {
-		outline: none;
-	}
 	.close-icon {
 		position: absolute;
 		top: 10px;
@@ -100,7 +68,7 @@ $textColor: #fff;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		gap: 20px;
+		gap: 50px;
 
 		.product-info {
 			display: flex;
@@ -114,13 +82,14 @@ $textColor: #fff;
 				max-width: 100%;
 				border-radius: 50%;
 				object-fit: contain;
+				box-shadow: var(--boxShadow);
 			}
 			.product-info-details {
 				flex: 1;
 				.title {
 					width: fit-content;
 					margin: 0 auto 10px;
-					border-bottom: 1px solid #c0c0c0;
+					border-bottom: var(--border);
 					padding: 0 10px 10px;
 				}
 				.desc,
@@ -128,8 +97,9 @@ $textColor: #fff;
 				.category {
 					margin: 5px auto;
 					> div {
-						border: 1px solid var(--secondColor);
-						padding: 3px 10px;
+						border: var(--border);
+						border-radius: 10px;
+						padding: 7px 10px;
 						margin-top: 5px;
 					}
 				}
@@ -185,23 +155,4 @@ $textColor: #fff;
 			}
 		}
 	}
-}
-
-.product-modal-overlay {
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	background-color: rgba(61, 61, 61, 0.7);
-	z-index: 9999;
-	// transition: all 0.5s ease-in-out;
-}
-
-.ReactModal__Content--after-open {
-	opacity: 1;
-}
-
-.ReactModal__Content--before-close {
-	opacity: 0;
 }
