--- a/client/src/css/Products/Products.css
+++ b/client/src/css/Products/Products.css
@@ -1,77 +1,53 @@
 .products-wrapper {
-  margin-top: 20px;
+  margin-top: 70px;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 20px;
-  transition: all 0.5s;
+  gap: 15px;
 }
 .products-wrapper .product-item {
-  box-shadow: 2px 2px 10px #c0c0c0;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  background-color: #fff;
+  box-shadow: 0px 1px 3px rgba(3, 0, 71, 0.09);
   overflow: hidden;
+  border-radius: 10px;
+  text-align: center;
+  transition: 0.3s;
+}
+.products-wrapper .product-item:hover {
+  box-shadow: 0px 1px 15px rgba(3, 0, 71, 0.09);
 }
 .products-wrapper .product-item img {
   width: 200px;
   max-width: 100%;
-  margin: auto;
   cursor: pointer;
+  padding: var(--padding);
 }
-.products-wrapper .product-item .product-desc {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  border-top: 1px solid var(--secondColor);
+.products-wrapper .product-item .product-desc > div {
+  color: var(--textSecondColor);
+  text-transform: capitalize;
+  padding: var(--padding);
+  text-align: left;
 }
 .products-wrapper .product-item .product-desc p {
-  text-transform: uppercase;
-}
-.products-wrapper .product-item button {
-  border: none;
-  font-size: 17px;
-  background: var(--mainColor);
-  color: var(--textColor);
-  width: 100%;
-  padding: 10px;
-  height: 40px;
-  text-align: left;
+  padding: var(--padding);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  cursor: pointer;
+  color: var(--redColor);
 }
-.products-wrapper .product-item button:active {
-  font-size: 16.7px;
+.products-wrapper .product-item .product-desc p span {
+  border-radius: 5px;
+  border: 1px solid var(--redColor);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  padding: 5px;
+  transition: all 0.3s;
+}
+.products-wrapper .product-item .product-desc p span:active {
+  transform: scale(0.93);
 }
 
-@media (max-width: 767px) {
-  .products-wrapper {
-    margin-top: 50px;
-  }
-  .products-wrapper .product-item {
-    width: 100%;
-  }
-}
-.product-modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  max-width: 90%;
-  max-height: 90%;
-  background-color: var(--bodyColor);
-  padding: 20px;
-  border-radius: 4px;
-  overflow: auto;
-  transition: all 0.4s ease-in-out;
-  opacity: 0;
-}
-.product-modal:focus {
-  outline: none;
-}
 .product-modal .close-icon {
   position: absolute;
   top: 10px;
@@ -88,7 +64,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 20px;
+  gap: 50px;
 }
 .product-modal .main-content .product-info {
   display: flex;
@@ -102,6 +78,7 @@
   max-width: 100%;
   border-radius: 50%;
   object-fit: contain;
+  box-shadow: var(--boxShadow);
 }
 .product-modal .main-content .product-info .product-info-details {
   flex: 1;
@@ -109,7 +86,7 @@
 .product-modal .main-content .product-info .product-info-details .title {
   width: fit-content;
   margin: 0 auto 10px;
-  border-bottom: 1px solid #c0c0c0;
+  border-bottom: var(--border);
   padding: 0 10px 10px;
 }
 .product-modal .main-content .product-info .product-info-details .desc,
@@ -120,8 +97,9 @@
 .product-modal .main-content .product-info .product-info-details .desc > div,
 .product-modal .main-content .product-info .product-info-details .price > div,
 .product-modal .main-content .product-info .product-info-details .category > div {
-  border: 1px solid var(--secondColor);
-  padding: 3px 10px;
+  border: var(--border);
+  border-radius: 10px;
+  padding: 7px 10px;
   margin-top: 5px;
 }
 .product-modal .main-content .modal-options {
@@ -172,21 +150,4 @@
     justify-content: center;
     gap: 5px;
   }
-}
-.product-modal-overlay {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-color: rgba(61, 61, 61, 0.7);
-  z-index: 9999;
-}
-
-.ReactModal__Content--after-open {
-  opacity: 1;
-}
-
-.ReactModal__Content--before-close {
-  opacity: 0;
 }
