--- a/client/src/pages/Profile/Profile.scss
+++ b/client/src/pages/Profile/Profile.scss
@@ -8,17 +8,22 @@
 	}
 
 	.user-image {
+		border-radius: 10px;
+		box-shadow: var(--boxShadow);
+		background-color: var(--bodyWhite);
 		width: 30%;
 		display: flex;
 		gap: 40px;
 		flex-direction: column;
-		text-align: center;
-		border-right: 1px solid #c0c0c0;
+		justify-content: center;
 		@media (max-width: 768px) {
 			width: 100%;
-			border: none;
 		}
 		.user-image-content {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			align-items: center;
 			img {
 				width: 200px;
 				height: 200px;
@@ -44,8 +49,10 @@
 		.user-configuration {
 			button {
 				padding: 10px;
-				text-decoration: none;
-				color: #000;
+				color: var(--textColor);
+				background-color: var(--mainColor);
+				transition: 0.3s;
+				border: var(--border);
 				font-size: 17px;
 				display: block;
 				width: 80%;
@@ -53,7 +60,7 @@
 				font-family: 'operator mono lig';
 				cursor: pointer;
 				margin: 0 auto 10px;
-				border: none;
+				// border: none;
 				opacity: 0.8;
 				&:hover {
 					opacity: 1;
@@ -63,6 +70,9 @@
 	}
 
 	.user-info {
+		border-radius: 10px;
+		box-shadow: var(--boxShadow);
+		background-color: var(--bodyWhite);
 		width: 70%;
 		@media (max-width: 768px) {
 			width: 100%;
@@ -70,32 +80,30 @@
 
 		h2 {
 			border-bottom: 1px solid #c0c0c0;
-			padding-bottom: 10px;
+			padding: 10px;
 		}
 		.user-info-box {
-			padding: 10px;
+			padding: 20px;
 			display: grid;
-			margin-bottom: 20px;
-			grid-template-columns: repeat(2, 50%);
-			@media (max-width: 767px) {
-				grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-			}
-			gap: 50px 20px;
+			// margin-bottom: 20px;
+			grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+			gap: 20px;
 			.box {
-				box-shadow: 0px 0px 2px #c0c0c0;
+				box-shadow: var(--boxShadow);
 				padding: 10px;
-				overflow: auto;
-				h4 {
+				border-radius: 10px;
+				h3 {
 					margin-bottom: 20px;
 				}
 				input {
 					padding: 10px;
-					border: 1px solid #c0c0c0;
+					width: 100%;
+					border: var(--border);
 					border-radius: 5px;
-					caret-color: orangered;
+					box-shadow: var(--boxShadow◘);
 					&:focus {
 						outline: none;
-						box-shadow: 0 2px 5px #c0c0c0;
+						border-color: var(--redColor);
 					}
 				}
 			}
@@ -104,52 +112,90 @@
 
 	.change-password {
 		position: relative;
+		// box-shadow: var(--boxShadow);
+		// border-radius: 10px;
 		width: 70%;
-		@media (max-width: 768px) {
+		@media (max-width: 767px) {
 			width: 100%;
 		}
+
 		.compare-password,
 		.change-form {
-			border: 1px solid #c0c0c0;
+			box-shadow: var(--boxShadow);
 			border-radius: 10px;
+			background-color: var(--bodyWhite);
 			padding: 10px;
-			width: 400px;
-			margin: 100px auto;
-			@media (max-width: 768px) {
+			width: 80%;
+			height: 200px;
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			transform: translate(-50%, -50%);
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			// align-items: center;
+			@media (max-width: 767px) {
 				position: relative;
 			}
 			h3 {
 				margin-bottom: 10px;
+				text-align: center;
 			}
 			input {
 				width: 100%;
 				padding: 10px;
 				border: none;
-				border-bottom: 1px solid #c0c0c0;
-
+				background-color: var(--bodyColor);
+				border-radius: 30px;
+				.error {
+					background-color: transparent;
+					color: var(--redColor);
+					padding: 0px 6px;
+				}
 				&:focus {
 					border: none;
 					outline: none;
-					box-shadow: 2px 2px 5px #c0c0c0;
 				}
 			}
 			.submit-password {
-				margin-top: 10px;
 				display: flex;
 				justify-content: center;
 				gap: 20px;
-			}
-			button {
-				padding: 10px;
-				background-color: #333;
-				color: #fff;
-				border: none;
-				margin-top: 10px;
+				button {
+					padding: 10px;
+					background-color: var(--redColor);
+					border-radius: 10px;
+					color: var(--textColor);
+					border: none;
+					margin-top: 10px;
+				}
 			}
 		}
-		.enter-new-password {
+	}
+}
+
+.delete-modal {
+	width: 400px;
+	.accept-delete {
+		h3 {
+			margin-bottom: 20px;
+		}
+		form {
 			display: flex;
-			gap: 10px;
+			justify-content: space-between;
+			gap: 20px;
+			button {
+				padding: 10px 20px;
+				border: none;
+				background-color: var(--redColor);
+				color: var(--textColor);
+				transition: 0.3s;
+				border-radius: 5px;
+				&:hover {
+					filter: brightness(1.2);
+				}
+			}
 		}
 	}
 }
